--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.5.2
 Django==3.2
-django-allauth==0.41.0
+django-allauth==0.51.0
 oauthlib==3.2.0
 Pillow==9.2.0
+PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
