--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==3.2
+django-address==0.2.8
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.0
 Pillow==9.2.0
+psycopg2-binary==2.9.3
 PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
