--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-address==0.2.8
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+gunicorn==20.1.0
 oauthlib==3.2.0
 Pillow==9.2.0
 psycopg2-binary==2.9.3
