--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+boto3==1.24.55
+botocore==1.27.55
 dj-database-url==0.5.0
 Django==3.2
 django-address==0.2.8
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.13.1
 gunicorn==20.1.0
+jmespath==1.0.1
 oauthlib==3.2.0
 Pillow==9.2.0
 psycopg2-binary==2.9.3
@@ -14,5 +18,6 @@ PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==4.0.2
